--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Ignore the build dir
+build
 
-# Precompiled Headers
-*.gch
-*.pch
+# Ignore any executables
+bin/*
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
